@@ -1,3 +1,7 @@
+2005-01-18  John ffitch  <jpff@codemist.co.uk>
+
+	* InOut/widgets.cpp (fl_joystick): Change to way up of joystick
+
 005-01-16  John ffitch  <jpff@codemist.co.uk>
 
 	* InOut/pa_blocking.c (paBlockingWriteStreamCallback): Fixed
